force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/aecm__Program_Project_Budget_Line__c.object-meta.xml
<CustomObject>
    <description>Container for budget line items of a Tempest project budget.</description>
    <label>Program Project Budget Line</label>
    <nameField>
        <displayFormat>BL-{00}</displayFormat>
        <label>Program Project Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Project Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>