force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/fields/aecm__Description__c.field-meta.xml
<CustomField>
    <fullName>aecm__Description__c</fullName>
    <inlineHelpText>Descriptive title for this line item.</inlineHelpText>
    <label>Description</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>