force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/fields/aecm__Program_Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Project_Budget__c</fullName>
    <label>Program Project Budget</label>
    <referenceTo>aecm__Program_Project_Budget__c</referenceTo>
    <relationshipLabel>Program Project Budget Lines</relationshipLabel>
    <relationshipName>Program_Project_Budget_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>