force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/fields/aecm__Summary__c.field-meta.xml
<CustomField>
    <fullName>aecm__Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>