force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/fields/aecm__Total__c.field-meta.xml
<CustomField>
    <fullName>aecm__Total__c</fullName>
    <inlineHelpText>Provide a total figure for this budget line.</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>