force-app/main/default/objects/aecm__Program_Project_Budget_Line__c/fields/aecm__Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Cost</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Overhead</fullName>
            </value>
            <value>
                <fullName>T&amp;E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>